2002-05-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: NSHomeDirectoryForUser() ... fix windoze bug ...
	was returning the current users home directory irrespective of the
	user asked for.  Now returns nil for other users ... should really
	find some mechanism to determine home directories for other users.

2002-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAssertion.m: Added comments and fixed bug in handling
	an assertion in a function ... was calling va_end() before the last
	use of the arguments.  Also, release new handler after adding it to
	thread dictionary ... fix memory leak.
	* Source/NSThread.m: Add fprintf of alert message to STDERR if we
	are unable to determine the current thread.  Don't attempt to use
	NSLog() or similar ... since chances are, without a thread object,
	that would just crash.
	In GSRegisterCurrentThread(), add code to handle the case where the
	NSThread class has not been initialised.
	* Source/NSObject.m: NSAllocateObject() raise exception if passed
	something other than a class to allocate an instance of.

2002-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GSUnixSSLHandle.m: Change '#if HAVE...' to '#ifdef HAVE_...'
	* Source/GSFormat.m: ditto
	* Source/GSHTTPURLHandle.m: ditto
	* Source/GSTcpPort.m: ditto
	* Source/NSBundle.m: ditto
	* Source/NSData.m: ditto
	* Source/NSDate.m: ditto
	* Source/NSFileManager.m: ditto
	* Source/NSHost.m: ditto
	* Source/NSLock.m: ditto
	* Source/NSLog.m: ditto
	* Source/NSPage.m: ditto
	* Source/NSPipe.m: ditto
	* Source/NSProcessInfo.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSString.m: ditto
	* Source/NSTask.m: ditto
	* Source/NSThread.m: ditto
	* Source/NSUser.m: ditto
	* Source/UnixFileHandle.m: ditto
	* Source/WindowsFileHandle.m: ditto
	* Tools/gsdoc.m: ditto
	* Tools/autogsdoc.m: ditto
	Fixes to handle configuration changes where AC_DEFINE is setting
	preprocessor constants to be empty (but defined) rather than to be 1
