@@ -4,6 +4,8 @@
 	was returning the current users home directory irrespective of the
 	user asked for.  Now returns nil for other users ... should really
 	find some mechanism to determine home directories for other users.
+	* Source/Additions/GSXML.m: If ([_parseChunk:]) is called with nil
+	data, terminate parsing.  Report by Alexander Malmberg.
 
 2002-05-03  Richard Frith-Macdonald <rfm@gnu.org>
 
